-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Value returned from a function is not checked for errors before being used
Defect 73595 (STATIC_C)
Checker CHECKED_RETURN (subcategory none)
File: /src/mongo/s/client/sharding_connection_hook.cpp
Function mongo::ShardingConnectionHook::onCreate(mongo::DBClientBase *)
/src/mongo/s/client/sharding_connection_hook.cpp, line: 98
Calling "runCommand" without checking return value (as is done elsewhere 62 out of 93 times).
conn->runCommand("admin", BSON("ismaster" << 1), isMasterResponse);