SERVER-20038 Check result of isMaster command in sharding connection hook